fix: unwantend vertical scrollbar on portfolio page

--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -10,7 +10,7 @@
 }
 
 .limitedHeight {
-    height: 100vh;
+    height: 90vh;
 }
 
 .container {
@@ -28,7 +28,7 @@
 
     @include media('desktop') {
         max-width: $content-width;
-        height: calc(100% - 59px);
+        height: calc(100% - 60px);
         margin-top: $margin-xl;
         padding: 0rem ($padding-m + $padding) 0;
     }
